# yolo-leg

./: .gitignore  main.py  pyproject.toml  sam.py  samdownload.py
FoodSeg103_YOLO_seg/: data.yaml
FoodSeg103_YOLO_seg/labels/train/: 00000000.txt  00000001.txt  00000002.txt  00000003.txt  00000004.txt  00000005.txt  00000006.txt  00000007.txt  00000008.txt  00000009.txt  00000010.txt  00000011.txt  00000012.txt  00000013.txt  00000014.txt  00000015.txt  00000016.txt  00000017.txt  00000018.txt  00000019.txt  00000020.txt  00000021.txt  00000022.txt  00000023.txt  00000024.txt  00000025.txt  00000026.txt  00000027.txt  00000028.txt  00000029.txt  00000030.txt  00000031.txt  00000032.txt  00000033.txt  00000034.txt  00000035.txt  00000036.txt  00000037.txt  00000038.txt  00000039.txt  (+4943 more)
FoodSeg103_YOLO_seg/labels/val/: 00000048.txt  00000263.txt  00001977.txt  00002106.txt  00004401.txt  00004402.txt  00004403.txt  00004404.txt  00004405.txt  00004406.txt  00004407.txt  00004408.txt  00004409.txt  00004410.txt  00004411.txt  00004412.txt  00004413.txt  00004414.txt  00004415.txt  00004416.txt  00004417.txt  00004418.txt  00004419.txt  00004420.txt  00004421.txt  00004422.txt  00004423.txt  00004424.txt  00004425.txt  00004426.txt  00004427.txt  00004428.txt  00004429.txt  00004430.txt  00004431.txt  00004432.txt  00004433.txt  00004434.txt  00004435.txt  00004436.txt  (+2095 more)
Resnet/: extract_zip_in_kfood.py  prepare_dataset.py  prepare_kfood.py  train.py
yolo/: predict.py  prepare_dataset.py  yolo_train.py
